--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "test": "jest --verbose --watch",
     "server": "nodemon index.js",
     "start": "node index.js"
   },
@@ -11,8 +12,11 @@
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
-    "jest": "25.1.0",
+    "jest": "^25.1.0",
     "nodemon": "^1.19.4",
-    "supertest": "4.0.2"
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
