--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "test": "jest --verbose --watch",
-    "server": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --watch",
+    "server": "cross-env NODE_ENV=dev nodemon index.js",
     "start": "node index.js"
   },
   "dependencies": {
